--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.0",
+    "ejs": "^2.5.2",
     "express": "^4.13.4",
     "request": "^2.71.0"
   }
